--- a/Message-index.html
+++ b/Message-index.html
@@ -4,11 +4,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>消息总界面</title>
-		<link rel="stylesheet" type="text/css" href="css/lesson.css">
+		<link rel="stylesheet" type="text/css" href="asserts/CSS/yespaceCss.css">
 
 	</head>
 	<body>
-		<div class="container">
+		<div class="container-liu">
 			<div>
 				<div class="list-header" style="background-color:
 				 #4C51B11E;border: 2px solid #4C51B11E;">
