--- a/search.html
+++ b/search.html
@@ -98,9 +98,11 @@
 			<tr>
 				<td>
 					<div class="logo" style="margin-top: 200px;">
+						<a href="search.html">
 						<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:40%; opacity:0.2; font-size:500px;">
 							<use xlink:href="#icon-logo"></use>
 						</svg>
+						</a>
 					</div>
 				</td>
 			</tr>
