--- a/searchsx.html
+++ b/searchsx.html
@@ -146,10 +146,12 @@
 				</ul>
 				<p>
 					<div class="suoxiao">
+						<a href="search.html">
 						<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:800px;opacity:0.2; font-size:50px;">
 							<use xlink:href="#icon-shousuo"></use>
 							<!--添加图库的图片-->
 						</svg>
+						</a>
 					</div>
 				</p>
 
