--- a/searchsx.html
+++ b/searchsx.html
@@ -41,12 +41,10 @@
 
 	</head>
 	<body>
-		<div class="box-shadow-vertical" style="position: static fixed;width:100%;">
+		<div class="box-shadow-vertical" style="position: static fixed;width:100%;height: 300px;">
 			<table width="100%" height="" border="0" cellpadding="0" cellspacing="0">
 				<!-- 搜索-->
-				<tr>
-					<td>
-						<div>
+				<div>
 							<div class="searcontent clearfix">
 				<tr>
 					<td style="text-align:center;" ;>
@@ -133,11 +131,8 @@
 					</li>
 					<li><a href="#" style="font-size: 40px;color:#4C51B1;">最低价</a>
 						<ul>
-							<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
-	border-top-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-	border-top-right-radius: 0px;
-"></li>
+							<li><input type="text" style="list-style: none;border-bottom-left-radius: 20px;
+	border-top-left-radius: 20px;border-bottom-right-radius: 20px;border-top-right-radius: 20px;"></li>
 
 						</ul>
 					</li>
@@ -147,7 +142,7 @@
 				<p>
 					<div class="suoxiao">
 						<a href="search.html">
-						<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:800px;opacity:0.2; font-size:50px;">
+						<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:800px;opacity:0.8; font-size:50px;">
 							<use xlink:href="#icon-shousuo"></use>
 							<!--添加图库的图片-->
 						</svg>
