1.增加搜索电脑结果 栅格化 失败

--- a/searchdn.html
+++ b/searchdn.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>搜索结果为电脑🔍</title>
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
 		<!-- <link rel="stylesheet" href="../Search/css/reset2.css"> -->
@@ -44,47 +45,69 @@
 				</table>
 			</div>
 		</div>
+		
+			<div class="searchresult">
+				<div class="container">
+				<div class="centerarea">
+					<div class="row">
+						<div class="col-md-3">
+							<div class="leftfu" style="margin-left:10px ; width: 200px;">
+								<ul>
+									<li>
+										<div class="touxiang" style="margin-top: 80px; ">
+											<a href="#">
 
-		<div class="searchresult">
-			<div class="centerarea">
-				<div class="leftfu">
-					<ul>
-						<li>
-							<div class="touxiang" style="margin-top: 80px; ">
-								<a href="#">
-									
+										</div>
+									</li>
+									<li>
+										<div class="guanzhu">
+											<a href="#">
+												<svg class="icon" aria-hidden="true">
+													<use xlink:href="#icon-shoucang"></use>
+												</svg>&nbsp;&nbsp;关注</a>
+										</div>
+									</li>
+									<li>
+										<div class="siliao">
+											<a href="#">
+												<svg class="icon" aria-hidden="true">
+													<use xlink:href="#icon-siliao"></use>
+												</svg>&nbsp;&nbsp;私聊</a>
+										</div>
+									</li>
+									<li>
+										<div class="fenxiang">
+											<a href="#">
+												<svg class="icon" aria-hidden="true">
+													<use xlink:href="#icon-fenxiang"></use>
+												</svg>&nbsp;&nbsp;分享</a>
+										</div>
+									</li>
+								</ul>
 							</div>
-						</li>
-						<li>
-							<div class="guanzhu">
-								<a href="#">
-									<svg class="icon" aria-hidden="true">
-										<use xlink:href="#icon-shoucang"></use>
-									</svg>&nbsp;&nbsp;&nbsp;关注</a>
+						</div>
+						<div class="col-md-4">
+							<div class="middlefu">
+								<table>
+									<tr>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
+											 alt="电脑1" border=0></td>
+										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
+											 alt="电脑2" border=0></td>
+									</tr>
+								</table>
+
+
 							</div>
-						</li>
-						<li>
-							<div class="siliao" >
-								<a href="#">
-									<svg class="icon" aria-hidden="true">
-										<use xlink:href="#icon-siliao"></use>
-									</svg>&nbsp;&nbsp;&nbsp;私聊</a>
+						</div>
+						<div class="col-md-5">
+							<div class="rightfu">
+								2222
 							</div>
-						</li>
-						<li>
-							<div class="fenxiang">
-								<a href="#">
-									<svg class="icon" aria-hidden="true">
-										<use xlink:href="#icon-fenxiang"></use>
-									</svg>&nbsp;&nbsp;&nbsp;分享</a>
-							</div>
-						</li>
-					</ul>
+						</div>
+
+					</div>
 				</div>
-				<div class="rightfu" style="position: absolute;left:100px;background:#0f0;margin-left:10px;" >
-
-				</div>
-
 			</div>
 		</div>
 
