缩减不必要代码

--- a/searchdn.html
+++ b/searchdn.html
@@ -5,17 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>搜索结果为电脑🔍</title>
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
-		<!-- <link rel="stylesheet" href="../Search/css/reset2.css"> -->
-		<style type="text/css">
-			/* 在线连接阿里妈妈的矢量图库 */
-			.icon {
-				width: 1em;
-				height: 1em;
-				vertical-align: -0.15em;
-				fill: currentColor;
-				overflow: hidden;
-			}
-		</style>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_cayoehnv9o.js"></script>
 		<base target="_blank">
 	</head>
@@ -24,7 +13,7 @@
 			<div class="searcontent " style=" width:100%;box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
 				<table class="icon" style="text-align:center; width:100%;AutoSizeColumnsMode:Fill">
 					<tr>
-						<td style="text-align:center margin-bottom:20%" ;>
+						<td style="text-align:center;margin-bottom:20%" ;>
 							<input type="text" style="padding-left:30px;  font-size:50px;opacity: 1;" placeholder="电脑">
 						</td>
 						<td class="item1">
@@ -55,7 +44,7 @@
 								<ul>
 									<li>
 										<div class="touxiang" style="margin-top: 80px; ">
-											<a href="#">
+											<a href="#"></a>
 
 										</div>
 									</li>
@@ -91,9 +80,9 @@
 								<table>
 									<tr>
 										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
-											 alt="电脑1" border=0></td>
+											 alt="computer"></td>
 										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
-											 alt="电脑2" border=0></td>
+											 alt="computer"></td>
 									</tr>
 								</table>
 
