--- a/searchsx.html
+++ b/searchsx.html
@@ -73,13 +73,8 @@
 					<li><a href="#" style="font-size: 40px;" id="sortout"><span style="margin:0px; border: 0;padding: 0px;  
 }">类别&nbsp;&nbsp;&nbsp;▼</span></a>
 						<ul id="menu2">
-							<li><a href="#">无</a>
-								<!-- <ul> -->
-								<!-- <li><a href="#">项目 3.1.1</a></li> -->
-								<!-- <li><a href="#">项目 3.1.2</a></li> -->
-								<!-- </ul> -->
-							</li>
-							<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp▶;<b class="trf"></b></a>
+							<li><a href="#">无</a></li>
+							<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp;▶<b class="trf"></b></a>
 								<ul id="menu3">
 									<li><a href="#">文具</a></li>
 									<li><a href="#">课本</a></li>
