--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav class="top-header sticky-top">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col" style="padding: 0px 0.3125rem" align="center">
+					<div class="col" style="padding: 0rem 0rem" align="center">
 						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;">
 							<use xlink:href="#icon-logo"></use>
 						</svg>
@@ -21,7 +21,7 @@
 					<div class="col-8" style="padding: 0rem;">
 						<object class="partnerLogo" data="asserts/plugins/SVG/wenzi.svg" type="image/svg+xml" style="margin-top: 1vw;"></object>
 					</div>
-					<div class="col" style="padding-left: 0rem 0.0625rem">
+					<div class="col" style="padding: 0rem 3vw">
 						<div class="area-zhe index-zhe" style="margin-top: 1vw;font-size: 3vw;" align="center"><svg class="icon"
 							 aria-hidden="true" style="color: var(--fColor);">
 								<use xlink:href="#icon-weizhi"></use>
@@ -59,7 +59,7 @@
 
 			</a>
 		</div>
-		<footer style="position: fixed;">123</footer>
+		<div class="bottom-shadow footer-zhe">da</div>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 	</body>
 </html>
