--- a/searchdn.html
+++ b/searchdn.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="searchtop">
-			<div class="searcontent " style=" width:100%;box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
+			<div class="searcontent ">
 				<table class="icon" style="text-align:center; width:100%;AutoSizeColumnsMode:Fill">
 					<tr>
 						<td style="text-align:center;margin-bottom:20%" ;>
