1.Bootstrap之前已经添加至项目中，引用方法： <link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" /> 2.对searchdn.html和searchsx.html进行完善

--- a/searchsx.html
+++ b/searchsx.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>搜索筛选</title>
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
-	<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<script type="text/javascript">
 			startList = function() {
 				if (document.all && document.getElementById) {
@@ -35,8 +35,9 @@
 			<!-- 搜索框 -->
 			<nav class="searcontent top-shadow sticky-top" style="width: 100%;">
 				<div class="container-fluid">
-					<div class="row" >
-						<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;" placeholder="您想找点啥呢"></div>
+					<div class="row">
+						<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;"
+							 placeholder="您想找点啥呢"></div>
 						<div class="col-2"><svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;">
 								<use xlink:href="#icon-sousuo"></use>
 							</svg></div>
@@ -49,101 +50,101 @@
 				</div>
 			</nav>
 			<div class="sxzl" id="menus">
-				<div class="sxzl" id="menus" >
-				<ul id="menu1">
-					<li><a href="#" style="font-size: 40px;" id="sortout"><span style="margin:0px; border: 0;padding: 0px;  
+				<div class="sxzl" id="menus">
+					<ul id="menu1">
+						<li><a href="#" style="font-size: 40px;" id="sortout"><span style="margin:0px; border: 0;padding: 0px;  
 }">类别&nbsp;&nbsp;&nbsp;▼</span></a>
-						<ul id="menu2">
-							<li><a href="#">无</a></li>
-							<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp;▶<b class="trf"></b></a>
-								<ul id="menu3">
-									<li><a href="#">文具</a></li>
-									<li><a href="#">课本</a></li>
-									<li><a href="#">习题</a></li>
-								</ul>
-							</li>
-							<li><a class="seconds" href="#">数码&nbsp;&nbsp;&nbsp;▶</a>
-								<ul id="menu3">
-									<li><a href="#">电脑</a></li>
-									<li><a href="#">手机</a></li>
-									<li><a href="#">配饰</a></li>
-								</ul>
-							</li>
-							<li><a class="seconds" href="#">日用&nbsp;&nbsp;&nbsp;▶</a>
-								<ul id="menu3">
-									<li><a href="#">洗护</a></li>
-									<li><a href="#">清洁</a></li>
-									<li><a href="#">护理</a></li>
-								</ul>
-							</li>
-							<li><a class="seconds" href="#">运动&nbsp;&nbsp;&nbsp;▶</a>
-								<ul id="menu3">
-									<li><a href="#">运动服饰</a></li>
-									<li><a href="#">运动器械</a></li>
-									<li><a href="#">运动装备</a></li>
-								</ul>
-							</li>
-							<li><a class="seconds" href="#">服饰&nbsp;&nbsp;&nbsp;▶</a>
-								<ul id="menu3">
-									<li><a href="#">女装</a></li>
-									<li><a href="#">男装</a></li>
-									<li><a href="#">童装</a></li>
-								</ul>
-							</li>
-							<li><a class="seconds" href="#" id="food" >食品&nbsp;&nbsp;&nbsp;▶</a>
-								<ul id="menu3">
-									<li><a href="#">坚果</a></li>
-									<li><a href="#">熟食</a></li>
-									<li><a href="#">饮品</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="#" style="font-size: 40px;" id="lowers">折旧度▼</a>
-						<ul>
-							<li><a href="#">九成</a></li>
-							<li><a href="#">八成</a></li>
-							<li><a href="#">七成</a></li>
-							<li><a href="#">六成</a></li>
-							<li><a href="#">五成</a></li>
-							<li><a href="#">四成</a></li>
-							<li><a href="#">三成</a></li>
-							<li><a href="#">二成</a></li>
-							<li><a href="#" id="botm">一成</a></li>
-						</ul>
-					</li>
-					<li><a href="#" style="font-size: 40px;">最低价</a>
-						<ul>
-							<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
+							<ul id="menu2">
+								<li><a href="#">无</a></li>
+								<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp;▶<b class="trf"></b></a>
+									<ul id="menu3">
+										<li><a href="#">文具</a></li>
+										<li><a href="#">课本</a></li>
+										<li><a href="#">习题</a></li>
+									</ul>
+								</li>
+								<li><a class="seconds" href="#">数码&nbsp;&nbsp;&nbsp;▶</a>
+									<ul id="menu3">
+										<li><a href="#">电脑</a></li>
+										<li><a href="#">手机</a></li>
+										<li><a href="#">配饰</a></li>
+									</ul>
+								</li>
+								<li><a class="seconds" href="#">日用&nbsp;&nbsp;&nbsp;▶</a>
+									<ul id="menu3">
+										<li><a href="#">洗护</a></li>
+										<li><a href="#">清洁</a></li>
+										<li><a href="#">护理</a></li>
+									</ul>
+								</li>
+								<li><a class="seconds" href="#">运动&nbsp;&nbsp;&nbsp;▶</a>
+									<ul id="menu3">
+										<li><a href="#">运动服饰</a></li>
+										<li><a href="#">运动器械</a></li>
+										<li><a href="#">运动装备</a></li>
+									</ul>
+								</li>
+								<li><a class="seconds" href="#">服饰&nbsp;&nbsp;&nbsp;▶</a>
+									<ul id="menu3">
+										<li><a href="#">女装</a></li>
+										<li><a href="#">男装</a></li>
+										<li><a href="#">童装</a></li>
+									</ul>
+								</li>
+								<li><a class="seconds" href="#" id="food">食品&nbsp;&nbsp;&nbsp;▶</a>
+									<ul id="menu3">
+										<li><a href="#">坚果</a></li>
+										<li><a href="#">熟食</a></li>
+										<li><a href="#">饮品</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a href="#" style="font-size: 40px;" id="lowers">折旧度▼</a>
+							<ul>
+								<li><a href="#">九成</a></li>
+								<li><a href="#">八成</a></li>
+								<li><a href="#">七成</a></li>
+								<li><a href="#">六成</a></li>
+								<li><a href="#">五成</a></li>
+								<li><a href="#">四成</a></li>
+								<li><a href="#">三成</a></li>
+								<li><a href="#">二成</a></li>
+								<li><a href="#" id="botm">一成</a></li>
+							</ul>
+						</li>
+						<li><a href="#" style="font-size: 40px;">最低价</a>
+							<ul>
+								<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
 	border-top-left-radius: 0px;
 	border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
 "></li>
-						</ul>
-					</li>
-					<li><a href="#" style="font-size: 40px;">最高价</a></li>
-				</ul>
+							</ul>
+						</li>
+						<li><a href="#" style="font-size: 40px;">最高价</a></li>
+					</ul>
 
-				<p>
-					<div class="suoxiao">
-						<a href="search.html">
-						<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:800px;opacity:0.8; font-size:50px;">
-							<use xlink:href="#icon-shousuo"></use>
-							<!--添加图库的图片-->
-						</svg>
-						</a>
-					</div>
-				</p>
+					<p>
+						<div class="suoxiao">
+							<a href="search.html">
+								<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:800px;opacity:0.8; font-size:50px;">
+									<use xlink:href="#icon-shousuo"></use>
+									<!--添加图库的图片-->
+								</svg>
+							</a>
+						</div>
+					</p>
 
+				</div>
 			</div>
-		</div>
-		<div class="logo" style="margin-top: 200px;">
-			<!-- logo -->
-			<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:25%; opacity:0.2; font-size:500px;">
-				<use xlink:href="#icon-logo"></use>
-				<!--添加图库的图片-->
-			</svg>
-		</div>
+			<div class="logo" style="margin-top: 200px;">
+				<!-- logo -->
+				<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:25%; opacity:0.2; font-size:500px;">
+					<use xlink:href="#icon-logo"></use>
+					<!--添加图库的图片-->
+				</svg>
+			</div>
 
 	</body>
 </html>
