--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
 
 			</a>
 		</div>
-		<div class="bottom-shadow footer-zhe">da</div>
+		<div class="bottom-shadow footer-zhe">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-2" style="background-color:blue;height:100px"></div>
+					<div class="col-2" style="background-color:black;height:100px"></div>
+					<div class="col-4" style="background-color:red;height:100px"></div>
+					<div class="col-2" style="background-color:yellow;height:100px"></div>
+					<div class="col-2" style="background-color:green;height:100px"></div>
+				</div>
+			</div>
+		</div>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 	</body>
 </html>
