--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -8,8 +8,75 @@
 
 	</head>
 	<body>
-		
-		
+		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
+		<div>
+			<div class=" container-dialog-liu">
+				<p>
+				<div class="otherp-liu">
+					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;">
+						<div class="word">
+							你觉得这个东西怎么样？
+						</div>
+						<div class="circle">
+							<div class="head-photo">
+								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+									<use xlink:href="#icon-iconbell"></use>
+								</svg> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				</p>
+				<p>
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+						<div class="word" style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
+							我觉得不错
+						</div>
+						<div class="circle">
+							<div class="head-photo">
+								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+									<use xlink:href="#icon-iconbell"></use>
+								</svg> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				</p>
+				<p>
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+						<div class="word " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
+							我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
+						</div>
+						<div class="circle" >
+							<div class="head-photo">
+								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+									<use xlink:href="#icon-iconbell"></use>
+								</svg> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				</p>
+				<p>
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box top-shadow bottom-shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
+						<img src="http://img1.imgtn.bdimg.com/it/u=3047594298,3149718737&fm=26&gp=0.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 75px;"/>
+						<div class="circle" >
+							<div class="head-photo">
+								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+									<use xlink:href="#icon-iconbell"></
+									use>
+								</svg> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				</p>
+			</div>
+		</div>
+	
 		
 	</body>
 </html>
