--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
+		<!-- JS库 -->
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<title>悠悦跳蚤市场</title>
 	</head>
 	<body>
-		<nav class="top-header sticky-top">
+		<nav class="top-header sticky-top shadow">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col" style="padding: 0rem 0rem" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;">
+						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;color: white;">
 							<use xlink:href="#icon-logo"></use>
 						</svg>
 					</div>
@@ -59,14 +63,35 @@
 
 			</a>
 		</div>
-		<div class="bottom-shadow footer-zhe">
+		<div class="footer-bot">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-2" style="background-color:blue;height:100px"></div>
-					<div class="col-2" style="background-color:black;height:100px"></div>
-					<div class="col-4" style="background-color:red;height:100px"></div>
-					<div class="col-2" style="background-color:yellow;height:100px"></div>
-					<div class="col-2" style="background-color:green;height:100px"></div>
+					<div class="col-2" style="height:100px" align="center" id="home" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+							<use xlink:href="#icon-zhuye"></use>
+						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">主页</a>
+					</div>
+					<div class="col-2" style="height:100px" align="center">
+						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+							<use xlink:href="#icon-sousuo"></use>
+						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">搜索</a>
+					</div>
+					<div class="col-4" style="height:100px;" align="center">
+						<svg class="icon" aria-hidden="true" style="font-size: 12rem;">
+							<use xlink:href="#icon-xinzeng"></use>
+						</svg><br /><a style="color:var(--fColor);font-size: 2rem;margin-bottom: 1rem">发布</a>
+					</div>
+					<div class="col-2" style="height:100px" align="center">
+						<div style="margin-bottom: 6.25rem;">
+						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+							<use xlink:href="#icon-xiaoxi"></use>
+						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">消息</a></div>
+					</div>
+					<div class="col-2" style="height:100px" align="center">
+						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+							<use xlink:href="#icon-wode"></use>
+						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">我的</a>
+					</div>
 				</div>
 			</div>
 		</div>
