--- a/searchsx.html
+++ b/searchsx.html
@@ -33,7 +33,7 @@
 	<body>
 		<div class="" style="width:100%;height: 300px;">
 			<!-- 搜索框 -->
-			<nav class="searcontent top-shadow sticky-top" style="width: 100%;">
+			<nav class="searcontent shadow sticky-top" style="width: 100%;">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;"
