1.优化搜索界面为电脑和展开

--- a/searchsx.html
+++ b/searchsx.html
@@ -134,8 +134,7 @@
 					<li><a href="#" style="font-size: 40px;">最低价</a>
 						<ul>
 							<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
-	border-top-left-radius: 0px;
-	border-bottom-right-radius: 0px;
+	border-top-left-radius: 0px;border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
 "></li>
 						</ul>
