--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -13,7 +13,7 @@
 			<div class=" container-dialog-liu">
 				<p>
 				<div class="otherp-liu">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;">
+					<div class="dialog-box shadow" style="margin: 30px 100px;">
 						<div class="word">
 							你觉得这个东西怎么样？
 						</div>
