Revert "1.优化搜索界面为电脑和展开"
This reverts commit 7036f45a70efab72681addc2750e33f551040dbb.

# Conflicts:
#	asserts/CSS/yespaceCss.css
#	searchsx.html

--- a/Message-inform.html
+++ b/Message-inform.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
-		<div class="container-inform-liu">
+		<div class="container1-liu">
 			<div class="dialog-box" >
 				<div class="word">
 					资金已转入平台账户，请您于25小时内将物品放入xx柜，开箱码xxxxxx，开箱码只能使用一次，一次之后失效。
