--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
-		<!-- JS库 -->
-		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
-		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
-		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<title>悠悦跳蚤市场</title>
 	</head>
 	<body>
-		<nav class="top-header sticky-top shadow">
+		<nav class="top-header sticky-top">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col" style="padding: 0rem 0rem" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;color: white;">
+					<div class="col" style="padding: 0px 0.3125rem" align="center">
+						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;">
 							<use xlink:href="#icon-logo"></use>
 						</svg>
 					</div>
 					<div class="col-8" style="padding: 0rem;">
 						<object class="partnerLogo" data="asserts/plugins/SVG/wenzi.svg" type="image/svg+xml" style="margin-top: 1vw;"></object>
 					</div>
-					<div class="col" style="padding: 0rem 3vw">
+					<div class="col" style="padding-left: 0rem 0.0625rem">
 						<div class="area-zhe index-zhe" style="margin-top: 1vw;font-size: 3vw;" align="center"><svg class="icon"
 							 aria-hidden="true" style="color: var(--fColor);">
 								<use xlink:href="#icon-weizhi"></use>
@@ -63,38 +59,7 @@
 
 			</a>
 		</div>
-		<div class="footer-bot">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-2" style="height:100px" align="center" id="home" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
-							<use xlink:href="#icon-zhuye"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">主页</a>
-					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
-							<use xlink:href="#icon-sousuo"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">搜索</a>
-					</div>
-					<div class="col-4" style="height:100px;" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 12rem;">
-							<use xlink:href="#icon-xinzeng"></use>
-						</svg><br /><a style="color:var(--fColor);font-size: 2rem;margin-bottom: 1rem">发布</a>
-					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<div style="margin-bottom: 6.25rem;">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
-							<use xlink:href="#icon-xiaoxi"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">消息</a></div>
-					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
-							<use xlink:href="#icon-wode"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">我的</a>
-					</div>
-				</div>
-			</div>
-		</div>
+		<footer style="position: fixed;">123</footer>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 	</body>
 </html>
