--- a/searchsx.html
+++ b/searchsx.html
@@ -2,11 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>搜索筛选</title>
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
-		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<style type="text/css">
+			/* 在线连接阿里妈妈的矢量图库用symbol方法 */
+			.icon {
+				width: 1em;
+				height: 1em;
+				vertical-align: -0.15em;
+				fill: currentColor;
+				overflow: hidden;
+			}
+		</style>
 		<script type="text/javascript">
+			<!--//--><![CDATA[//><!--
 			startList = function() {
 				if (document.all && document.getElementById) {
 					navRoot = document.getElementById("menu2");
@@ -24,6 +33,7 @@
 
 			}
 			window.onload = startList;
+			//--><!]]>
 		</script>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_cayoehnv9o.js"></script>
 		<base target="_blank">
@@ -31,119 +41,127 @@
 
 	</head>
 	<body>
-		<div class="" style="width:100%;height: 300px;">
-			<!-- 搜索框 -->
-			<nav class="searcontent shadow sticky-top" style="width: 100%;">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;"
-							 placeholder="您想找点啥呢"></div>
-						<div class="col-2"><svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;">
+		<div class="box-shadow-vertical" style="position: static fixed;width:100%;height: 300px;">
+			<table width="100%" height="" border="0" cellpadding="0" cellspacing="0">
+				<!-- 搜索-->
+				<div>
+							<div class="searcontent clearfix">
+				<tr>
+					<td style="text-align:center;" ;>
+						<input type="text" style="padding-left:20px;  font-size:50px;" placeholder="您想找点啥呢">
+					</td>
+					<td class="item1">
+						<a href="#">
+							<svg class="icon" aria-hidden="true" style="margin-left:5%;margin-top: 10%;font-size: 65px;color:#4C51B1;">
 								<use xlink:href="#icon-sousuo"></use>
-							</svg></div>
-						<div class="col-2"><a href="searchsx.html">
-								<svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;padding: 0rem 0rem;">
-									<use xlink:href="#icon-zhankai"></use>
-								</svg>
-							</a></div>
-					</div>
-				</div>
-			</nav>
+								<!--添加图库的图  -->
+							</svg>
+						</a>
+					</td>
+					<td class="item2">
+						<a href="#">
+							<svg class="icon" aria-hidden="true" style="margin-right:5%;margin-top: 10%;font-size: 65px;color:#4C51B1;">
+								<use xlink:href="#icon-zhankai"></use>
+							</svg>
+						</a>
+					</td>
+				</tr>
+			</table>
 			<div class="sxzl" id="menus">
-				<div class="sxzl" id="menus">
-					<ul id="menu1">
-						<li><a href="#" style="font-size: 40px;" id="sortout"><span style="margin:0px; border: 0;padding: 0px;  
+				<div class="sxzl" id="menus" >
+				<ul id="menu1">
+					<li><a href="#" style="font-size: 40px;" id="sortout"><span style="margin:0px; border: 0;padding: 0px;  
 }">类别&nbsp;&nbsp;&nbsp;▼</span></a>
-							<ul id="menu2">
-								<li><a href="#">无</a></li>
-								<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp;▶<b class="trf"></b></a>
-									<ul id="menu3">
-										<li><a href="#">文具</a></li>
-										<li><a href="#">课本</a></li>
-										<li><a href="#">习题</a></li>
-									</ul>
-								</li>
-								<li><a class="seconds" href="#">数码&nbsp;&nbsp;&nbsp;▶</a>
-									<ul id="menu3">
-										<li><a href="#">电脑</a></li>
-										<li><a href="#">手机</a></li>
-										<li><a href="#">配饰</a></li>
-									</ul>
-								</li>
-								<li><a class="seconds" href="#">日用&nbsp;&nbsp;&nbsp;▶</a>
-									<ul id="menu3">
-										<li><a href="#">洗护</a></li>
-										<li><a href="#">清洁</a></li>
-										<li><a href="#">护理</a></li>
-									</ul>
-								</li>
-								<li><a class="seconds" href="#">运动&nbsp;&nbsp;&nbsp;▶</a>
-									<ul id="menu3">
-										<li><a href="#">运动服饰</a></li>
-										<li><a href="#">运动器械</a></li>
-										<li><a href="#">运动装备</a></li>
-									</ul>
-								</li>
-								<li><a class="seconds" href="#">服饰&nbsp;&nbsp;&nbsp;▶</a>
-									<ul id="menu3">
-										<li><a href="#">女装</a></li>
-										<li><a href="#">男装</a></li>
-										<li><a href="#">童装</a></li>
-									</ul>
-								</li>
-								<li><a class="seconds" href="#" id="food">食品&nbsp;&nbsp;&nbsp;▶</a>
-									<ul id="menu3">
-										<li><a href="#">坚果</a></li>
-										<li><a href="#">熟食</a></li>
-										<li><a href="#">饮品</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li><a href="#" style="font-size: 40px;" id="lowers">折旧度▼</a>
-							<ul>
-								<li><a href="#">九成</a></li>
-								<li><a href="#">八成</a></li>
-								<li><a href="#">七成</a></li>
-								<li><a href="#">六成</a></li>
-								<li><a href="#">五成</a></li>
-								<li><a href="#">四成</a></li>
-								<li><a href="#">三成</a></li>
-								<li><a href="#">二成</a></li>
-								<li><a href="#" id="botm">一成</a></li>
-							</ul>
-						</li>
-						<li><a href="#" style="font-size: 40px;">最低价</a>
-							<ul>
-								<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
+						<ul id="menu2">
+							<li><a href="#">无</a></li>
+							<li><a class="seconds" href="#">学习&nbsp;&nbsp;&nbsp;▶<b class="trf"></b></a>
+								<ul id="menu3">
+									<li><a href="#">文具</a></li>
+									<li><a href="#">课本</a></li>
+									<li><a href="#">习题</a></li>
+								</ul>
+							</li>
+							<li><a class="seconds" href="#">数码&nbsp;&nbsp;&nbsp;▶</a>
+								<ul id="menu3">
+									<li><a href="#">电脑</a></li>
+									<li><a href="#">手机</a></li>
+									<li><a href="#">配饰</a></li>
+								</ul>
+							</li>
+							<li><a class="seconds" href="#">日用&nbsp;&nbsp;&nbsp;▶</a>
+								<ul id="menu3">
+									<li><a href="#">洗护</a></li>
+									<li><a href="#">清洁</a></li>
+									<li><a href="#">护理</a></li>
+								</ul>
+							</li>
+							<li><a class="seconds" href="#">运动&nbsp;&nbsp;&nbsp;▶</a>
+								<ul id="menu3">
+									<li><a href="#">运动服饰</a></li>
+									<li><a href="#">运动器械</a></li>
+									<li><a href="#">运动装备</a></li>
+								</ul>
+							</li>
+							<li><a class="seconds" href="#">服饰&nbsp;&nbsp;&nbsp;▶</a>
+								<ul id="menu3">
+									<li><a href="#">女装</a></li>
+									<li><a href="#">男装</a></li>
+									<li><a href="#">童装</a></li>
+								</ul>
+							</li>
+							<li><a class="seconds" href="#" id="food" >食品&nbsp;&nbsp;&nbsp;▶</a>
+								<ul id="menu3">
+									<li><a href="#">坚果</a></li>
+									<li><a href="#">熟食</a></li>
+									<li><a href="#">饮品</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li><a href="#" style="font-size: 40px;" id="lowers">折旧度▼</a>
+						<ul>
+							<li><a href="#">九成</a></li>
+							<li><a href="#">八成</a></li>
+							<li><a href="#">七成</a></li>
+							<li><a href="#">六成</a></li>
+							<li><a href="#">五成</a></li>
+							<li><a href="#">四成</a></li>
+							<li><a href="#">三成</a></li>
+							<li><a href="#">二成</a></li>
+							<li><a href="#" id="botm">一成</a></li>
+						</ul>
+					</li>
+					<li><a href="#" style="font-size: 40px;">最低价</a>
+						<ul>
+							<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
 	border-top-left-radius: 0px;border-bottom-right-radius: 0px;
 	border-top-right-radius: 0px;
 "></li>
-							</ul>
-						</li>
-						<li><a href="#" style="font-size: 40px;">最高价</a></li>
-					</ul>
+						</ul>
+					</li>
+					<li><a href="#" style="font-size: 40px;">最高价</a></li>
+				</ul>
 
-					<p>
-						<div class="suoxiao">
-							<a href="search.html">
-								<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:800px;opacity:0.8; font-size:50px;">
-									<use xlink:href="#icon-shousuo"></use>
-									<!--添加图库的图片-->
-								</svg>
-							</a>
-						</div>
-					</p>
+				<p>
+					<div class="suoxiao">
+						<a href="search.html">
+						<svg class="icon" aria-hidden="true" style="color:#4C51B1;margin-left:800px;opacity:0.8; font-size:50px;">
+							<use xlink:href="#icon-shousuo"></use>
+							<!--添加图库的图片-->
+						</svg>
+						</a>
+					</div>
+				</p>
 
-				</div>
 			</div>
-			<div class="logo" style="margin-top: 200px;">
-				<!-- logo -->
-				<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:25%; opacity:0.2; font-size:500px;">
-					<use xlink:href="#icon-logo"></use>
-					<!--添加图库的图片-->
-				</svg>
-			</div>
+		</div>
+		<div class="logo" style="margin-top: 200px;">
+			<!-- logo -->
+			<svg class="icon" aria-hidden="true" style="color:#666666;margin-left:25%; opacity:0.2; font-size:500px;">
+				<use xlink:href="#icon-logo"></use>
+				<!--添加图库的图片-->
+			</svg>
+		</div>
 
 	</body>
 </html>
