--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -13,7 +13,7 @@
 			<div class=" container-dialog-liu">
 				<p>
 				<div class="otherp-liu">
-					<div class="dialog-box shadow" style="margin: 30px 100px;">
+					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;">
 						<div class="word">
 							你觉得这个东西怎么样？
 						</div>
@@ -29,7 +29,7 @@
 				</p>
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
 						<div class="word" style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
 							我觉得不错
 						</div>
@@ -45,7 +45,7 @@
 				</p>
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
 						<div class="word " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
 							我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
 						</div>
