--- a/searchdn.html
+++ b/searchdn.html
@@ -29,72 +29,61 @@
 
 		<div class="searchresult">
 			<div class="container">
-				<div class="centerarea" style="box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
+				<div class="centerarea">
 					<div class="row">
-						<div class="col-3">
-							<div class="leftfu">
+						<div class="col-md-3">
+							<div class="leftfu" style="margin-left:10px ; width: 200px;">
 								<ul>
 									<li>
-										<div class="touxiang" style="margin-top: 10px; ">
-											<a href="#">
-												<img src="asserts/img/loader.svg" />
-											</a>
+										<div class="touxiang" style="margin-top: 80px; ">
+											<a href="#"></a>
 
 										</div>
 									</li>
 									<li>
-										<div class="guanzhu" style="margin-top: 10px;display: inline-block;font-size:30px;">
+										<div class="guanzhu">
 											<a href="#">
-												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+												<svg class="icon" aria-hidden="true">
 													<use xlink:href="#icon-shoucang"></use>
-												</svg>关注</a>
+												</svg>&nbsp;&nbsp;关注</a>
 										</div>
 									</li>
 									<li>
-										<div class="siliao" style="margin-top: 10px;display:inline-block;font-size:30px;">
+										<div class="siliao">
 											<a href="#">
-												<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
+												<svg class="icon" aria-hidden="true">
 													<use xlink:href="#icon-siliao"></use>
-												</svg>私聊</a>
+												</svg>&nbsp;&nbsp;私聊</a>
 										</div>
 									</li>
 									<li>
-										<div class="fenxiang" style="margin-top: 10px;display:inline-block;font-size:30px;">
-											<p>
-												<a href="#">
-													<svg class="icon" aria-hidden="true" style="vertical-align:middle;">
-														<use xlink:href="#icon-fenxiang"></use>
-													</svg>分享</a>
-
+										<div class="fenxiang">
+											<a href="#">
+												<svg class="icon" aria-hidden="true">
+													<use xlink:href="#icon-fenxiang"></use>
+												</svg>&nbsp;&nbsp;分享</a>
 										</div>
 									</li>
 								</ul>
 							</div>
 						</div>
-						<div class="col-4">
+						<div class="col-md-4">
 							<div class="middlefu">
 								<table>
 									<tr>
 										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104806&di=8473e5efba3c4f67bd2e43b42f8705e3&imgtype=0&src=http%3A%2F%2Fimage3.suning.cn%2Fuimg%2Fb2c%2Fnewcatentries%2F0070119542-000000000635831682_1_800x800.jpg"
-											 alt="computer">
-										</td>
+											 alt="computer"></td>
 										<td><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565066104807&di=2f8357fa34e51cbe685eef1e9e7dba8f&imgtype=0&src=http%3A%2F%2Fimg0.pconline.com.cn%2Fpconline%2F1109%2F28%2F2544311_07.jpg"
-											 alt="computer">
-										</td>
+											 alt="computer"></td>
 									</tr>
 								</table>
 
 
 							</div>
 						</div>
-						<div class="col-5">
+						<div class="col-md-5">
 							<div class="rightfu">
-								惠普笔记本-6成新-￥3320
-								<br>戴尔笔记本-7成新-￥3320</br>
-								<br></br>
-								<a href="#" style="font-size:20px;">设备</a>
-								<br>
-								<a href="#" class="chakanfu"><p align="middle">查看全部</p></a>
+								2222
 							</div>
 						</div>
 
