除搜索之外均无问题

--- a/searchdn.html
+++ b/searchdn.html
@@ -5,36 +5,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>搜索结果为电脑🔍</title>
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
-		<!-- <link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" /> -->
+		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_cayoehnv9o.js"></script>
 		<base target="_blank">
 	</head>
 	<body>
-		<div id="searchtop">
-			<div class="searcontent " style=" width:100%;box-shadow: inset 5px 5px 90px white,5px 5px 20px #00000044">
-				<table class="icon" style="text-align:center; width:100%;AutoSizeColumnsMode:Fill">
-					<tr>
-						<td style="text-align:center;margin-bottom:20%" ;>
-							<input type="text" style="padding-left:30px;  font-size:50px;opacity: 1;" placeholder="电脑">
-						</td>
-						<td class="item1">
-							<a href="#">
-								<svg class="icon" aria-hidden="true" style="margin-left:5%;margin-top: 10%;font-size: 65px;color:#000;">
-									<use xlink:href="#icon-sousuo"></use>
-								</svg>
-							</a>
-						</td>
-						<td class="item2">
-							<a href="searchsx.html">
-								<svg class="icon" aria-hidden="true" style="margin-right:5%;margin-top: 10%;font-size: 65px;color:#000;">
-									<use xlink:href="#icon-zhankai"></use>
-								</svg>
-							</a>
-						</td>
-					</tr>
-				</table>
+		<nav class="searcontent top-shadow sticky-top" style="width: 100%;">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;"
+						 placeholder="您想找点啥呢"></div>
+					<div class="col-2"><svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;">
+							<use xlink:href="#icon-sousuo"></use>
+						</svg></div>
+					<div class="col-2"><a href="searchsx.html">
+							<svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;padding: 0rem 0rem;">
+								<use xlink:href="#icon-zhankai"></use>
+							</svg>
+						</a></div>
+				</div>
 			</div>
-		</div>
+		</nav>
 
 		<div class="searchresult">
 			<div class="container">
