更新全部文件,大部分文件没有问题

--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -13,7 +13,7 @@
 			<div class=" container-dialog-liu">
 				<p>
 				<div class="otherp-liu">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;">
+					<div class="dialog-box shadow" style="margin: 30px 100px;">
 						<div class="word">
 							你觉得这个东西怎么样？
 						</div>
@@ -29,13 +29,13 @@
 				</p>
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
 						<div class="word" style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
 							我觉得不错
 						</div>
 						<div class="circle">
 							<div class="head-photo">
-								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+							<!-- 	<svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
 									<use xlink:href="#icon-iconbell"></use>
 								</svg> -->
 							</div>
@@ -45,7 +45,7 @@
 				</p>
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box bottom-shadow top-shadow" style="margin: 30px 100px;background-color: #fff;" >
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
 						<div class="word " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
 							我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
 						</div>
@@ -61,8 +61,8 @@
 				</p>
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box top-shadow bottom-shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
-						<img src="http://img1.imgtn.bdimg.com/it/u=3047594298,3149718737&fm=26&gp=0.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 75px;"/>
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
+						<img src="http://pic41.nipic.com/20140508/18609517_112216473140_2.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 75px;"/>
 						<div class="circle" >
 							<div class="head-photo">
 								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
