1.优化searchsx.html布局，引入Bootstrap（@Grace注意更新页面布局）

--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<!-- 搜索框 -->
-		<nav class="searcontent shadow sticky-top" style="width: 100%;">
+		<nav class="searcontent shadow sticky-top search" style="width: 100%;">
 			<div class="container-fluid">
 				<div class="row" >
 					<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;" placeholder="您想找点啥呢"></div>
