--- a/searchdnzk.html
+++ b/searchdnzk.html
@@ -18,7 +18,7 @@
 									<div class="searcontent clearfix">
 						<tr>
 							<td style="text-align:center;" ;>
-								<input type="text" style="padding-left:20px;  font-size:50px;" placeholder="您想找点啥呢">
+								<input type="text" style="padding-left:20px;  font-size:50px;" placeholder="电脑">
 							</td>
 							<td class="item1">
 								<a href="#">
@@ -137,7 +137,7 @@
 									<li>
 										<div class="touxiang" style="margin-top: 10px; ">
 											<a href="#">
-												<img src="asserts/img/loader.svg" />
+												<img src="../asserts/typing.svg" />
 											</a>
 
 										</div>
